<resources>
    <string name="app_name">AndroidTestATHH</string>

    <string name="title_cards">Cards</string>
    <string name="title_contact">Contact</string>

    <string name="title_post">Пост</string>
    <string name="hint_id_post">ID поста(от 1 до 100)</string>
    <string name="post_title">Title:</string>
    <string name="post_body">Body:</string>

    <string name="title_comment">Комментарий</string>
    <string name="hint_id_comment">ID коментария(от 1 до 500)</string>
    <string name="comment_name">Name:</string>
    <string name="comment_email">Email:</string>
    <string name="comment_body">Body:</string>

    <string name="title_users">Пользователи</string>
    <string name="title_photo">Картинка</string>

    <string name="title_todo">Задача</string>
    <string name="todo_id">id:</string>
    <string name="todo_title">Title:</string>
    <string name="todo_completed">Completed:</string>

    <string name="contact_title_email">Email:</string>
    <string name="contact_title_fio">ФИО:</string>
    <string name="contact_title_phone_number">Номер телефона:</string>
    <string name="contact_email">lantratov.vasia@yandex.ru</string>
    <string name="contact_phone_number">8 916 9146026</string>
    <string name="contact_fio">Лантратов Василий Анатольевич</string>

    <string name="button_submit">Подтвердить</string>
    <string name="button_refresh">Обновить</string>

    <string name="photo_description">description</string>

</resources>
